--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/main.js",
   "scripts": {
     "start": "node dist/main.js",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "tsc && node dist/main.js"
   },
   "repository": {
     "type": "git",
@@ -18,11 +19,11 @@
   },
   "homepage": "https://github.com/Feuerhamster/web-youtube-downloader#readme",
   "dependencies": {
+    "@distube/ytdl-core": "^4.15.8",
     "express": "^4.17.1",
     "node-cache": "^5.1.2",
     "pug": "^3.0.2",
-    "typescript": "^4.2.3",
-    "ytdl-core": "^4.8.2"
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.11"
